--- a/config/starship/rose-pine-moon.toml
+++ b/config/starship/rose-pine-moon.toml
@@ -30,25 +30,27 @@ overlay = '#393552'
 love = '#eb6f92'
 gold = '#f6c177'
 rose = '#ea9a97'
-pine = '#3e8fb0'
+pine = '#32BBBB'
 foam = '#9ccfd8'
 iris = '#c4a7e7'
 
 [directory]
 format = "[](fg:overlay)[ $path ]($style)[](fg:overlay) "
-style = "bg:overlay fg:pine"
+style = "bg:overlay fg:pine bold"
 truncation_length = 3
 truncation_symbol = "…/"
 
 [directory.substitutions]
-Documents = "󰈙"
-Downloads = " "
-Music = " "
-Pictures = " "
+"Documents" = "󰈙 "
+"Downloads" = " "
+"Music" = " "
+"Pictures" = " "
+"Developer" = "󰲋 "
+"~" = " "
 
 [fill]
 style = "fg:overlay"
-symbol = " "
+symbol = "—"
 
 [git_branch]
 format = "[](fg:overlay)[ $symbol $branch ]($style)[](fg:overlay) "
